# Shimzy

./: .gitignore  app.py  models.py  pyproject.toml  render.yaml  requirements.txt
static/: manifest.json  offline.html  service-worker.js
static/css/: style.css
static/js/: chat.js  webrtc.js
templates/: base.html  forgot_password.html  reset_password.html
templates/auth/: login.html  register.html
templates/chat/: main.html
