[tool.poetry]
name = "shimzy" 
version = "0.1.0" 
description = "Chat application"
authors = ["Shim Kevin <shim70497@email.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "2.3.2"
werkzeug = "2.3.7"  # Explicitly pinned version
gevent = "^25.5.1"
gunicorn = "*"
flask-socketio = "*"
flask-login = "0.6.2"

[tool.poetry.group.dev.dependencies]
pytest = "*"